fixes to remove locales from links

--- a/learn-certs-pr/azure-administrator.yml
+++ b/learn-certs-pr/azure-administrator.yml
@@ -37,7 +37,7 @@ exams:
 - uid: exam.az-103
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure Administrator Associate zu werden.
+  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure Administrator Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtY7Z
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
