--- a/learn-certs-pr/azure-ai-engineer.yml
+++ b/learn-certs-pr/azure-ai-engineer.yml
@@ -36,7 +36,7 @@ exams:
 - uid: exam.ai-100
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure AI Engineer Associate zu werden.
+  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure AI Engineer Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWusKi
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
