--- a/learn-certs-pr/azure-data-scientist.yml
+++ b/learn-certs-pr/azure-data-scientist.yml
@@ -34,7 +34,7 @@ exams:
 - uid: exam.dp-100
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure Data Scientist Associate zu werden.
+  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure Data Scientist Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PLKZ
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
