--- a/learn-certs-pr/azure-developer.yml
+++ b/learn-certs-pr/azure-developer.yml
@@ -55,7 +55,7 @@ exams:
 - uid: exam.az-203
 resources:
 - title: Zertifizierungs-Lernpfad
-  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter: Azure-Developer-Associate zu werden.'
+  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft Certified: Azure Developer Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQqM
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
