--- a/learn-certs-pr/exams/77-725.yml
+++ b/learn-certs-pr/exams/77-725.yml
@@ -9,6 +9,9 @@ summary: "Erfolgreiche Kandidaten für die Prüfung Word 2016 haben ein grundleg
 subTitle: Erfolgreiche Kandidaten für die Prüfung Word 2016 haben ein grundlegendes Verständnis der Word-Umgebung und die Fähigkeit, Aufgaben selbständig zu erledigen. Sie demonstrieren die korrekte Anwendung der Hauptfunktionen von Word 2016, indem sie zwei- bis dreiseitige Dokumente für verschiedene Zwecke und Situationen erstellen und bearbeiten. Beispiele für Dokumente sind professionell gestaltete Berichte, mehrspaltige Newsletter, Lebensläufe und Geschäftskorrespondenz.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3XVfI
+providers:
+  - providerType: certiport
+    examUrl: http://www.certiport.com/locator
 locales:
 - en
 - zh-cn
@@ -27,7 +30,6 @@ locales:
 - ru
 - th
 - tr
-scheduleExamUrl: http://www.certiport.com/locator
 levels:
 - intermediate
 skills:
