--- a/learn-certs-pr/exams/77-727.yml
+++ b/learn-certs-pr/exams/77-727.yml
@@ -9,6 +9,9 @@ summary: "Erfolgreiche Kandidaten für die MOS Excel 2016-Prüfung verfügen üb
 subTitle: Erfolgreiche Kandidaten für die MOS Excel 2016-Prüfung verfügen über umfassende Kenntnisse im Umgang mit der Excel-Umgebung und sind in der Lage, umfassende Aufgaben eigenständig zu bearbeiten. Sie kennen und demonstrieren die korrekte Anwendung der grundlegenden Funktionen von Excel 2016. Kandidaten erstellen und bearbeiten eine Arbeitsmappe mit mehreren Blättern und verwenden ein grafisches Element, um Daten visuell darzustellen. Dazu gehören zum Beispiel professionell aussehende Kostenaufstellungen, Finanzübersichten, Teamleistungstabellen, Rechnungen und Dateneingabeprotokolle.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3XVfJ
+providers:
+  - providerType: certiport
+    examUrl: http://www.certiport.com/locator
 locales:
 - en
 - zh-cn
@@ -27,7 +30,6 @@ locales:
 - ru
 - th
 - tr
-scheduleExamUrl: http://www.certiport.com/locator
 levels:
 - intermediate
 skills:
