--- a/learn-certs-pr/exams/77-728.yml
+++ b/learn-certs-pr/exams/77-728.yml
@@ -9,6 +9,9 @@ summary: "Kandidaten, die als Experten für die Microsoft Excel 2016-Prüfung ge
 subTitle: Kandidaten, die als Experten für die Microsoft Excel 2016-Prüfung gelten, sollten fortgeschrittene Kenntnisse der Excel-Umgebung haben und andere bei der richtigen Nutzung der Funktionen anleiten können.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Y5Aw
+providers:
+  - providerType: certiport
+    examUrl: http://www.certiport.com/locator
 locales:
 - en
 - zh-cn
@@ -19,7 +22,6 @@ locales:
 - ja
 - ko
 - nb
-scheduleExamUrl: http://www.certiport.com/locator
 levels:
 - intermediate
 skills:
