--- a/learn-certs-pr/exams/77-729.yml
+++ b/learn-certs-pr/exams/77-729.yml
@@ -17,6 +17,9 @@ summary: >
 subTitle: Erfolgreiche Kandidaten verfügen über grundlegendes Verständnis der PowerPoint-Umgebung und demonstrieren die korrekte Anwendung von PowerPoint 2016. Kandidaten erstellen, bearbeiten und verbessern Präsentationen und Bildschirmpräsentationen. Beispielpräsentationen umfassen professionelle Verkaufspräsentationen, Angestelltenschulungen, Ausbildermaterial und Kiosk Slideshows.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Y8dr
+providers:
+  - providerType: certiport
+    examUrl: http://www.certiport.com/locator
 locales:
 - en
 - zh-cn
@@ -35,7 +38,6 @@ locales:
 - ru
 - th
 - tr
-scheduleExamUrl: http://www.certiport.com/locator
 levels:
 - intermediate
 skills:
