--- a/learn-certs-pr/exams/77-731.yml
+++ b/learn-certs-pr/exams/77-731.yml
@@ -9,6 +9,9 @@ summary: "Erfolgreiche Kandidaten erstellen und bearbeiten professionell aussehe
 subTitle: Erfolgreiche Kandidaten erstellen und bearbeiten professionell aussehende E-Mail-Nachrichten, verwalten zeitzonenübergreifende Kalender und planen Aufgaben für eine Vielzahl von Zweckenund Situationen. Kandidaten verwenden Outlook 2016 zur Verbesserung ihrer professionellen Korrespondenz, zur Erstellung von Kalendern und zur Terminplanung. Anweungsbeispiele sind unter anderem Koordinierung von Resourssenaufbau, Nachrichten für Marketingkampagnen, Mitarbeitermeetings planen und Aktionselemente für Meetings zuweisen.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Y8ds
+providers:
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 locales:
 - en
 - zh-cn
@@ -19,7 +22,6 @@ locales:
 - ja
 - ko
 - nb
-scheduleExamUrl: http://www.certiport.com/locator
 levels:
 - intermediate
 skills:
