--- a/learn-certs-pr/exams/az-301.yml
+++ b/learn-certs-pr/exams/az-301.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Examination
 title: Microsoft Azure Architect Design
 metadata:
-  title: 'Prüfung AZ-301: Microsoft Azure Architect-Design'
-  description: 'Prüfung AZ-301: Microsoft Azure Architect-Design'
+  title: 'Prüfung AZ-301: Microsoft Azure Architect Design'
+  description: 'Prüfung AZ-301: Microsoft Azure Architect Design'
 uid: exam.az-301
 displayName: AZ-301
 summary: >-
@@ -77,7 +77,7 @@ relatedCertifications:
     uid: certification.azure-solutions-architect
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter Azure Solutions Architect Experte zu werden.
+  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft Certified: Azure Solutions Architect Expert zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtVsd
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
