--- a/learn-certs-pr/exams/az-400.yml
+++ b/learn-certs-pr/exams/az-400.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Examination
 title: Microsoft Azure DevOps Solutions
 metadata:
-  title: 'Prüfung AZ-400: Microsoft Azure DevOps-Lösungen'
-  description: 'Prüfung AZ-400: Microsoft Azure DevOps-Lösungen'
+  title: 'Prüfung AZ-400: Microsoft Azure DevOps Solutions'
+  description: 'Prüfung AZ-400: Microsoft Azure DevOps Solutions'
 uid: exam.az-400
 displayName: AZ-400
 summary: >-
@@ -19,7 +19,7 @@ locales:
 - ja
 - zh-cn
 - ko
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-400&examname=Prüfung%20AZ-400:%20Microsoft%20Azure%20DevOps-Lösungen&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-400
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-400&examname=Prüfung%20AZ-400:%20Microsoft%20Azure%20DevOps%20Solutions&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-400
 levels:
 - advanced
 skills:
@@ -57,7 +57,7 @@ relatedCertifications:
     uid: certification.azure-devops
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter Azure DevOps Engineering Experte zu werden
+  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft Certified: Azure DevOps Engineer Expert zu werden'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE41muG
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
