--- a/learn-certs-pr/exams/mb-310.yml
+++ b/learn-certs-pr/exams/mb-310.yml
@@ -57,7 +57,7 @@ relatedCertifications:
     uid: certification.d365-functional-consultant-financials
 resources:
 - title: Zertifikat Lernpfad
-  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter: Dynamics 365 Finance Functional Consultant Associate zu werden.'
+  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft Certified: Dynamics 365 Finance Functional Consultant Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svL
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
