--- a/learn-certs-pr/exams/mo-100.yml
+++ b/learn-certs-pr/exams/mo-100.yml
@@ -9,9 +9,11 @@ summary: Ein Absolvent dieser Zertifizierung verfügt über ca. 150 Stunden Einw
 subTitle: Diese Prüfung misst die Kompetenz in der korrekten Anwendung der Hauptfunktionen von Word durch die Erstellung und Bearbeitung von Dokumenten für eine Vielzahl von Zwecken und Situationen. Die Prüfung umfasst die Fähigkeit, professionell aussehende Berichte, mehrspaltige Newsletter, Lebensläufe und Geschäftskorrespondenz zu erstellen und zu pflegen.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3WPxx
+providers:
+  - providerType: certiport
+    examUrl: http://www.certiport.com/locator
 locales:
 - en
-scheduleExamUrl: http://www.certiport.com/locator
 levels:
 - intermediate
 skills:
