--- a/learn-certs-pr/exams/ms-700.yml
+++ b/learn-certs-pr/exams/ms-700.yml
@@ -42,7 +42,7 @@ relatedCertifications:
     uid: certification.m365-teams-administrator-associate
 resources:
 - title: Zertifikat Lernpfad
-  description: Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft zertifizierter  Teams Administrator Associate.
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Teams Administrator Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE45gtR
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
