--- a/learn-certs-pr/m365-developer-associate.yml
+++ b/learn-certs-pr/m365-developer-associate.yml
@@ -31,7 +31,7 @@ exams:
 - uid: exam.ms-600
 resources:
 - title: Zertifikat Lernpfad
-  description: Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft zertifizierter Entwickler Associate.
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft 365 Certified: Developer Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4561r
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
