--- a/learn-certs-pr/m365-modern-desktop.yml
+++ b/learn-certs-pr/m365-modern-desktop.yml
@@ -40,7 +40,7 @@ exams:
 - uid: exam.md-101
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Modern Desktop Administrator Associate zu werden.
+  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft 365 Certified: Modern Desktop Administrator Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE45lE2
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
