--- a/learn-certs-pr/microsoft-365-fundamentals.yml
+++ b/learn-certs-pr/microsoft-365-fundamentals.yml
@@ -31,7 +31,7 @@ exams:
 - uid: exam.ms-900
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Grundlagen.
+  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft 365 Certified Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svT
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
