--- a/learn-certs-pr/azure-devops.yml
+++ b/learn-certs-pr/azure-devops.yml
@@ -49,7 +49,7 @@ exams:
 - uid: exam.az-400
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure DevOps Engineering Experte zu werden.
+  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure DevOps Engineer Expert zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE41muG
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
