--- a/learn-certs-pr/d365-functional-consultant-financials.yml
+++ b/learn-certs-pr/d365-functional-consultant-financials.yml
@@ -50,7 +50,7 @@ exams:
 - uid: exam.mb-310
 resources:
 - title: Zertifikat Lernpfad
-  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter: Dynamics 365 Finance Functional Consultant Associate'
+  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft Certified: Dynamics 365 Finance Functional Consultant Associate'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svL
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
