--- a/learn-certs-pr/d365-functional-consultant-marketing.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing.yml
@@ -48,7 +48,7 @@ exams:
 - uid: exam.mb-220
 resources:
 - title: Zertifikat Lernpfad
-  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter: Dynamics 365 Marketing Functional Consultant Associate.'
+  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35I7b
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
