--- a/learn-certs-pr/d365-fundamentals.yml
+++ b/learn-certs-pr/d365-fundamentals.yml
@@ -27,7 +27,7 @@ exams:
 - uid: exam.mb-900
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Dynamics 365 Fundamentals zertifiziert zu werden.
+  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Dynamics 365 Fundamentals zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35v9m
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
