--- a/learn-certs-pr/exams/62-193.yml
+++ b/learn-certs-pr/exams/62-193.yml
@@ -5,13 +5,18 @@ metadata:
   description: 'Prüfung 62-193: Technology Literacy for Educators'
 uid: exam.62-193
 displayName: 62-193
-summary: >-
+summary: |-
   Zu den Kandidaten für diese Prüfung gehören Personen, die sich darauf vorbereiten, Klassenlehrer zu werden, aktuelle Ausbilder, Dozenten in der Lehrerausbildung oder an Vordiplomschulen, Bildungsadministratoren oder andere Fachkräfte, die eine Validierung der Kompetenz anstreben.
 
 
-  Der MCE&#58; Der Zertifizierungstest "Technologiekompetenz für Ausbilder" ist eine Prüfung auf mittlerer Ebene, die als gültiges und zuverlässiges Maß für die Kompetenzen im Rahmen des 21st Century Learning Design (21CLD) dienen soll.
+  Der MCE&#58; Der Zertifizierungstest "Technology Literacy for Educators" ist eine Prüfung auf mittlerer Ebene, die als gültiges und zuverlässiges Maß für die Kompetenzen im Rahmen des 21st Century Learning Design (21CLD) dienen soll.
 subTitle: Zu den Kandidaten für diese Prüfung gehören Personen, die sich darauf vorbereiten, Klassenlehrer zu werden, aktuelle Ausbilder, Dozenten in der Lehrerausbildung oder an Vordiplomschulen, Bildungsadministratoren oder andere Fachkräfte, die eine Validierung der Kompetenz anstreben.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
+providers:
+  - providerType: pearson-vue
+    examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=62-193&examname=Technology%20Literacy%20for%20Educators&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2F62-193
+  - providerType: certiport
+    examUrl: http://www.certiport.com/locator
 locales:
 - en
 - de
@@ -22,7 +27,6 @@ locales:
 - ru
 - pl
 - ja
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=62-193&examname=Technologiekompetenz%20für%20Ausbilder&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F62-193
 levels:
 - beginner
 skills:
