--- a/learn-certs-pr/exams/70-333.yml
+++ b/learn-certs-pr/exams/70-333.yml
@@ -13,7 +13,7 @@ practiceTestUrl: https://www.mindhub.com/product-p/mu-70-333_p.htm&utm_source=mi
 locales:
 - en
 - ja
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=333&examname=Bereitstellung%20von%20Enterprise%20Voice%20mit%20Skype%20für%20Unternehmen%202015&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F70-333
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=333&examname=Deploying%20Enterprise%20Voice%20with%20Skype%20for%20Business%202015&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F70-333
 levels:
 - advanced
 skills:
