--- a/learn-certs-pr/exams/70-345.yml
+++ b/learn-certs-pr/exams/70-345.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Examination
 title: Designing and Deploying Microsoft Exchange Server 2016
 metadata:
-  title: 'Prüfung 70-345: Design und Bereitstellung von Microsoft Exchange Server 2016'
-  description: 'Prüfung 70-345: Design und Bereitstellung von Microsoft Exchange Server 2016'
+  title: 'Prüfung 70-345: Designing and Deploying Microsoft Exchange Server 2016'
+  description: 'Prüfung 70-345: Designing and Deploying Microsoft Exchange Server 2016'
 uid: exam.70-345
 displayName: 70-345
 summary: >-
@@ -23,7 +23,7 @@ locales:
 - de
 - ja
 - pt-br
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=345&examname=Design%20und%20Bereitstellung%20von%20Microsoft%20Exchange%20Server%202016&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F70-345
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=345&examname=Designing%20and%20Deploying%20Microsoft%20Exchange%20Server%202016&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2F70-345
 levels:
 - advanced
 skills:
