--- a/learn-certs-pr/exams/az-101.yml
+++ b/learn-certs-pr/exams/az-101.yml
@@ -35,7 +35,7 @@ relatedCertifications:
     uid: certification.azure-administrator
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure Administrator Associate zu werden.
+  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure Administrator Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtY7Z
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
