--- a/learn-certs-pr/exams/az-102.yml
+++ b/learn-certs-pr/exams/az-102.yml
@@ -11,7 +11,7 @@ summary: >-
   <br/>
 
 
-  Diese Prüfung ist nur für diejenigen Kandidaten bestimmt, die [Prüfung 70-533](https://www.microsoft.com/learning/exam-70-533.aspx) abgelegt haben&#58; Implementierung von Microsoft Azure Infrastruktur-Lösungen. Wenn Sie die Prüfung 533 nicht absolviert haben, erhalten Sie keine Zertifizierung, wenn Sie diese Prüfung ablegen.
+  Diese Prüfung ist nur für diejenigen Kandidaten bestimmt, die [Prüfung 70-533](https://www.microsoft.com/learning/exam-70-533.aspx) abgelegt haben&#58; Implementing Microsoft Azure Infrastructure Solutions. Wenn Sie die Prüfung 533 nicht absolviert haben, erhalten Sie keine Zertifizierung, wenn Sie diese Prüfung ablegen.
 
 
   Die Übergangsprüfung richtet sich an Personen, die bereits Fähigkeiten im Content-Bereich nachgewiesen haben, indem sie die bestehende(n) Prüfung(en) bestanden haben, die durch die neue rollenbasierte Zertifizierungsprüfungen ersetzt werden. Sie decken das Missverhältnis zwischen der aktuellen Zertifizierung und dem, was wir von Menschen erwarten, die neue Zertifizierung erhalten, ab. Wir wollen Personen mit dem gleichen Inhalt nicht erneut testen, wenn sie bereits Kompetenz nachgewiesen haben, indem sie die bestehende Prüfung bestanden haben.
@@ -24,7 +24,7 @@ summary: >-
 
 
   Kandidaten für diese Prüfung sollten über Kenntnisse im Umgang mit PowerShell und der Befehlszeilenoberfläche verfügen. Kandidaten sollten grundlegende Kenntnisse über Azure Portal, ARM-Vorlagen, Betriebssysteme, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen und Netzwerke haben.
-subTitle: 'Diese Prüfung ist nur für Kandidaten bestimmt, die abgelegt haben Prüfung 70-533: Implementierung von Microsoft Azure Infrastruktur-Lösungen. Wenn Sie die Prüfung 533 nicht abgelegt haben, erhalten Sie mit dieser Prüfung keine Zertifizierung.'
+subTitle: 'Diese Prüfung ist nur für Kandidaten bestimmt, die abgelegt haben Prüfung 70-533: Implementing Microsoft Azure Infrastructure Solutions. Wenn Sie die Prüfung 533 nicht abgelegt haben, erhalten Sie mit dieser Prüfung keine Zertifizierung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VzwA
 practiceTestUrl: https://www.mindhub.com/product-p/mu-az-102_p.htm?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -55,7 +55,7 @@ relatedCertifications:
     uid: certification.azure-administrator
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure Administrator Associate zu werden.
+  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Azure Administrator Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtY7Z
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
