--- a/learn-certs-pr/exams/mb-210.yml
+++ b/learn-certs-pr/exams/mb-210.yml
@@ -45,7 +45,7 @@ relatedCertifications:
     uid: certification.d365-functional-consultant-sales
 resources:
 - title: Zertifikat Lernpfad
-  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter: Dynamics 365 Sales Functional Consultant Associate zu werden.'
+  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft Certified: Dynamics 365 Sales Functional Consultant Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35xKa
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
