--- a/learn-certs-pr/exams/md-101.yml
+++ b/learn-certs-pr/exams/md-101.yml
@@ -23,7 +23,7 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJV
 practiceTestUrl: https://us.mindhub.com/p/MU-MD-101?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MD-101&examname=Prüfung%20MD-101:%20Management%20von%20Modern%20Desktops&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmd-101
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MD-101&examname=Prüfung%20MD-101:%20Managing%20Modern%20Desktops&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmd-101
 levels:
 - intermediate
 skills:
@@ -47,7 +47,7 @@ relatedCertifications:
     uid: certification.modern-desktop
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um ein Microsoft-zertifizierter Modern Desktop Administrator Associate zu werden.
+  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft Certified: Modern Desktop Administrator Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE45lE2
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
