--- a/learn-certs-pr/m365-security-administrator.yml
+++ b/learn-certs-pr/m365-security-administrator.yml
@@ -33,7 +33,7 @@ exams:
 - uid: exam.ms-500
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Security Administrator Associate zu werden.
+  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft 365 Certified: Security Administrator Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE458DG
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
