--- a/learn-certs-pr/m365-teams-administrator-associate.yml
+++ b/learn-certs-pr/m365-teams-administrator-associate.yml
@@ -32,7 +32,7 @@ exams:
 - uid: exam.ms-700
 resources:
 - title: Zertifikat Lernpfad
-  description: Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft zertifizierter Teams Administrator Associate.
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft 365 Certified: Teams Administrator Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE45gtR
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
