--- a/learn-certs-pr/m365-teamwork-administrator.yml
+++ b/learn-certs-pr/m365-teamwork-administrator.yml
@@ -43,7 +43,7 @@ exams:
 - uid: exam.ms-301
 resources:
 - title: Zertifikat Lernpfad
-  description: Entdecken Sie die Schulungsressourcen, um Microsoft Certified: Teamwork Administrator Associate zu werden.
+  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft 365 Certified: Teamwork Administrator Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE453ss
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
