fixes to remove locales from links

--- a/learn-certs-pr/courses/20339-2.yml
+++ b/learn-certs-pr/courses/20339-2.yml
@@ -54,7 +54,7 @@ summary: |-
 prerequisitesSection: |-
   Ein idealer Bewerber für diesen Kurs muss mindestens ein Jahr Erfahrung mit der Einführung und Verwaltung von multiplen SharePoint Servern 2013&#58; Farmen in großen Unternehmen gesammelt haben. Der Bewerber sollte den Kurs 20339-1A&#58; Planung und Verwaltung von Microsoft SharePoint 2016 abgeschlossen haben oder ähnliche Föhigkeiten vorweisen können.
   
-  Vor Antritt des Kurses muss der Kandidat die folgenden Fähigkeiten vorweisen können&#58,
+  Vor Antritt des Kurses muss der Kandidat die folgenden Fähigkeiten vorweisen können&#58;
   - mindestens Ein Jahr Erfahrung mit der Aufzeichnung von betrieblichen Anforderungen und sowohl logischen als auch physischen technischen Designs.
   - Arbeitserfahrung in Netzwerk Design und Netzwerksicherheit.
   - Software Management Erfahrung mit einem Windows Server 2012 R2 Unternehmensserver oder Windows Server 2016 Umgebung.
