--- a/learn-certs-pr/courses/az-120t00.yml
+++ b/learn-certs-pr/courses/az-120t00.yml
@@ -8,8 +8,8 @@ courseNumber: 'AZ-120T00-A'
 hoursToComplete: 96
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Migration von SAP HANA, S/4HANA SAP&#58; Netweaver zu Azure
-- skill: Einsatz von Azure Portal, Cloud Shell, Azure PowerShell, CLI und Resource Manager.
+- skill: Migration von SAP HANA, S/4HANA SAP Netweaver zu Azure
+- skill: Einsatz von Azure Portal, Cloud Shell, Azure PowerShell, CLI und Resource Manager
 - skill: Standortübergreifende Konnektivitätsfunktioneninklusive Vnet Peering und VNet-toVNet Verbindungen nutzen
 - skill: Mit Azure Active Directory (AAD) und Azure AD Connect arbeiten
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
