--- a/learn-certs-pr/courses/az-203t04.yml
+++ b/learn-certs-pr/courses/az-203t04.yml
@@ -38,7 +38,7 @@ prerequisitesSection: |-
   - Es wird empfohlen, dass die Teilnehmer auch Erfahrung mit PowerSehll oder Azure CLI haben, mit der Arbeit in dem Azure Portal und mit mindestens einer Azure gestützten Programmiersprache. Die meisten Prüfungen in diesem Kurs sie in C# NET vorgestellt.
 outlineSection: |-
   ### Modul 1&#58; Implementieren der Authentifizierung
-  Microsoft Identity Platform ist eine Entwicklung des Azure Active Directory (Azure AD) Identity service und developer Platform.. Es ermöglicht es dem Developer, Anwendungen, die sich in alle Microsoft Identitäten einloggen, zu erstellen, Tokens um Microsoft Graph abzurufen, andere Microsoft APIs oder APIS die andere Developer erstellt haben, zu erhalten.
+  Microsoft Identity Platform ist eine Entwicklung des Azure Active Directory (Azure AD) Identity service und developer Platform. Es ermöglicht es dem Developer, Anwendungen, die sich in alle Microsoft Identitäten einloggen, zu erstellen, Tokens um Microsoft Graph abzurufen, andere Microsoft APIs oder APIS die andere Developer erstellt haben, zu erhalten.
   #### Lektionen
   - Microsoft Identity Platform
   - Implementierung der OAuth2-Authentifizierung
