--- a/learn-certs-pr/courses/az-203t06.yml
+++ b/learn-certs-pr/courses/az-203t06.yml
@@ -42,7 +42,7 @@ prerequisitesSection: |-
   PowerShell oder Azure CLI Arbeit im Azure Portal und mit mindestens
   Einer Azure-gestützten Programmiersprache haben. Die Meisten Beispiele in diesem Kurs werden in C# NET präsentiert.
 outlineSection: |-
-  ### Module 1&#58; Entwickeln einer App Service Logic App.
+  ### Modul 1&#58; Entwickeln einer App Service Logic App.
   Logic Apps hilft Ihnen Lösungen zu erstellen die Apps, Daten, Systeme und Dienste im gesamten Unternehmen oder einer Organisation durch die Automatisierung von Aufgaben und Betriebsprozessen als Workflows integrieren. Dieses Modul erklärt, was sie sind und wie man sie erstellt.
   #### Lektionen
   - Überblick über Azure Logic Apps
