--- a/learn-certs-pr/courses/az-300t02.yml
+++ b/learn-certs-pr/courses/az-300t02.yml
@@ -69,7 +69,7 @@ outlineSection: |-
   - Anwendungsdienste implementieren und verwalten
 
 
-  ### Module 3&#58; Implementierung eines erweiterten virtuellen Netzwerks
+  ### Modul 3&#58; Implementierung eines erweiterten virtuellen Netzwerks
   Dieses Modul beinhaltet die folgenden Themen&#58; Azure Load Balancer; Azure-application-gateway; Site-to-Site VPN Verbindungen; so wie einen Überblick über ExpressRoute, der es Betrieben ermöglicht die on-premise Netzwerke in der Microsoft Cloud über zugewiesene private Verbindunen durch einen Verbindungsprovider zu erweitern.
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
