--- a/learn-certs-pr/courses/az-300t06.yml
+++ b/learn-certs-pr/courses/az-300t06.yml
@@ -107,4 +107,4 @@ outlineSection: |-
   - Blob Container Properties in NET verändern
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  Azure-storage-services wie Blobs oder Cosmos DB verstehen
+  - Azure-storage-services wie Blobs oder Cosmos DB verstehen
