--- a/learn-certs-pr/courses/az-301t01.yml
+++ b/learn-certs-pr/courses/az-301t01.yml
@@ -8,11 +8,11 @@ courseNumber: 'AZ-301T01-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Existierende Lösungen mit externen Identitätsprovidern durch Azure AD B2B&#58; oder B2C integrieren
+- skill: Existierende Lösungen mit externen Identitätsprovidern durch Azure AD B2B oder B2C integrieren
 - skill: Hybride Identitätslösungen entwerfen
 - skill: Festlegen, wann advanced features von Azure AD wie Managed Service Identify, MFA und Privileged Identity Management verwendet werden.
 - skill: Anwendungsgeheimnise mit Key Vault sichern
-- skill: Anwendungsdaten durch SQL&#58; Datenbank und Azure-storage Funktionen sichern.
+- skill: Anwendungsdaten durch SQL Datenbank und Azure-storage Funktionen sichern.
 - skill: Verschiedenen APIs die in Kognitive Dienstleistungen verfügbar sind detaillieren
 - skill: Erkennen, wann Face API Speech API oder Language Understanding (LUIS) Dienste genutzt werden sollen.
 - skill: Die Beziehung hwischen Bot-Framework und Azure-bot-service beschreiben
