--- a/learn-certs-pr/courses/dp-070t00.yml
+++ b/learn-certs-pr/courses/dp-070t00.yml
@@ -92,4 +92,5 @@ outlineSection: |-
   ­- Anwendungsmigration
   - Überlegungen zur Migration
 
-  #### Additional Reading:Keine Extraliteratur ist für diesen Kurs nötig
+  #### Additional Reading&#58;
+  - Keine Extraliteratur ist für diesen Kurs nötig
