--- a/learn-certs-pr/courses/mb-300t03.yml
+++ b/learn-certs-pr/courses/mb-300t03.yml
@@ -42,7 +42,7 @@ outlineSection: |-
   Wenn es Zeit für Datenmigration ist, ist es umso einfacher, die Komplexität des Betriebs zu kontrollieren und die Kosten zu senken, je mehr man davon weiß. Die Kontinuität des Geschäfts des Kunden muss Vorrang haben. In diesem Modul lernen die Teilnehmer, wie man Daten für eine erfolgreiche Migration vorbereitet, indem man wichtige Faktoren wie vorhandene Systeme, sowie statische und allgemeine Daten identifiziert.
   
   
-  In diesem Modul lernen die Studenten, wie man&#58
+  In diesem Modul lernen die Studenten, wie man&#58;
   - Eine Datenintegrationsstrategie (Import / Export) auswählt
   - Identifizieren gängiger Migrationsszenarien und -tools in Finance and Operations
   - Verstehen der Funktion „Einbringen der eigenen Datenbank (BYOD)"
@@ -93,7 +93,7 @@ outlineSection: |-
   In diesem Modul lernten die Schüler&#58;
   - Wie man die Korrelation zwischen Testfällen und Geschäftsanforderungen versteht
   - Bewährte Taktiken für die Aufzeichnung von Testfällen
-  Task-Rekorder
+  - Task-Rekorder
   - Wie man eine BPM-Bibliothek für Szenarienakzeptanztests erteilt
   - Wie man ihren Testplan in Azure DevOps synchronisiert und konfiguriert
   - Ausführen von Tests
