--- a/learn-certs-pr/courses/ms-200t01.yml
+++ b/learn-certs-pr/courses/ms-200t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Grundlegendes zur modernen Messaging-Infrastruktur (Englisch)
+title: Grundlegendes zur modernen Messaging-Infrastruktur
 metadata:
-  title: 'Kurs MS-200T01-A: Grundlegendes zur modernen Messaging-Infrastruktur (Englisch)'
-  description: 'Kurs MS-200T01-A: Grundlegendes zur modernen Messaging-Infrastruktur (Englisch)'
+  title: 'Kurs MS-200T01-A: Grundlegendes zur modernen Messaging-Infrastruktur'
+  description: 'Kurs MS-200T01-A: Grundlegendes zur modernen Messaging-Infrastruktur'
 uid: course.ms-200t01
 courseNumber: 'MS-200T01-A'
 hoursToComplete: 48
