--- a/learn-certs-pr/courses/az-900t01.yml
+++ b/learn-certs-pr/courses/az-900t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Microsoft Azure Fundamentals (1 TagEnglisch)
+title: Microsoft Azure Fundamentals
 metadata:
-  title: 'Kurs AZ-900T01-A: Microsoft Azure Fundamentals (1 TagEnglisch)'
-  description: 'Kurs AZ-900T01-A: Microsoft Azure Fundamentals (1 TagEnglisch)'
+  title: 'Kurs AZ-900T01-A: Microsoft Azure Fundamentals'
+  description: 'Kurs AZ-900T01-A: Microsoft Azure Fundamentals'
 uid: course.az-900t01
 courseNumber: 'AZ-900T01-A'
 hoursToComplete: 24
