--- a/learn-certs-pr/courses/md-101t02.yml
+++ b/learn-certs-pr/courses/md-101t02.yml
@@ -85,7 +85,7 @@ outlineSection: |-
   ### Modul 3&#58; Anwendungsmanagement
   In diesem Modul lernen die Teilnehmer das Anwendungsmanagement von On-Premise- und Cloud-basierten Lösungen kennen. In diesem Modul wird die Verwaltung von Office 365 ProPlus-Bereitstellungen in Intune sowie die Verwaltung von Anwendungen auf nicht angemeldeten Geräten behandelt. Das Modul schließt mit einem Überblick über den Enterprise-Modus mit Internet Explorer und Microsoft Edge und der Verfolgung Ihrer installierten Anwendungen, Lizenzen und zugewiesenen Apps mit Intune.
   #### Lektionen
-  Mobile Application Management implementieren (MAM)
+  - Mobile Application Management implementieren (MAM)
   - Bereitstellung und Aktualisierung von Anwendungen
   - Anwendungen verwalten
 
